added stuff, need to organise

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -3,4 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 project(app)
 
 add_subdirectory(texture_test)
+add_subdirectory(python_test)
+add_subdirectory(editor)
 add_subdirectory(new_editor)
+add_subdirectory(ecs_test)
