something is broken

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(python_test)
 add_subdirectory(editor)
 add_subdirectory(new_editor)
 add_subdirectory(ecs_test)
+add_subdirectory(bvh_test)
