--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -13,3 +13,5 @@ add_subdirectory(imgui)
 add_subdirectory(assimp)
 add_subdirectory(pybind11)
 add_subdirectory(yaml-cpp)
+add_subdirectory(efsw)
+add_subdirectory(ImGuizmo)
