--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -6,6 +6,14 @@ file(GLOB_RECURSE SRC_FILES ./*.cpp)
 
 add_library(engine ${SRC_FILES})
 
+find_package(X11 REQUIRED)
+if(!X11_XTest_FOUND)
+    message(FATAL_ERROR "X11 extensions are required, but not found!")
+endif()
+if(!X11_Xfixes_LIB)
+    message(FATAL_ERROR "X11 fixes extension is required, but not found!")
+endif()
+
 include_directories(engine
     ../deps
 )
@@ -23,4 +31,9 @@ target_link_libraries(engine
     ImGuizmo
     EnTT
     ctti
+    screen_capture_lite_static
+    ${X11_LIBRARIES}
+    ${X11_Xfixes_LIB}
+    ${X11_XTest_LIB}
+    ${X11_Xinerama_LIB}
 )
