removed screen capture lite

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -20,4 +20,4 @@ add_subdirectory(ImGuizmo)
 add_subdirectory(entt)
 add_subdirectory(ctti)
 
-add_subdirectory(screen_capture_lite)
+# add_subdirectory(screen_capture_lite)
